--- a/web/templates/data_users.html
+++ b/web/templates/data_users.html
@@ -11,13 +11,29 @@
 </head>
 <style>
     body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f0f0f0;
+            font-family: 'Calibri', sans-serif;
+            background-image: url('{{ url_for("static", filename="2222.jpg") }}');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
+            position: relative; /* Tambahkan position: relative untuk mengizinkan stacking dengan elemen lain */
+        }
+
+        body::before {
+            content: ""; /* Elemen pseudo-before untuk efek blur */
+            background: inherit; /* Gunakan background dari elemen utama */
+            filter: blur(2px);
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: -1; /* Mengirimkan ke belakang elemen utama */
         }
 
         header {
@@ -84,7 +100,7 @@
             padding: 10px 20px;
             margin-top: 20px;
             font-size: 16px;
-            background-color: #ca2828;
+            background-color: #FF5722;
             color: #fff;
             border: none;
             border-radius: 5px;
@@ -93,7 +109,7 @@
         }
 
         .delete-btn:hover {
-            background-color: #ca2828;
+            background-color: #FF5722;
         }
 
 
