--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -99,7 +99,7 @@
             font-size: 24px;
         }
 
-        .login-btn, .register-btn, .logout-btn, .view-profile-btn {
+        .login-btn, .register-btn, .logout-btn {
             display: inline-block;
             padding: 10px 20px;
             margin-top: 0px;
@@ -110,23 +110,18 @@
         }
 
         .login-btn {
-            background-color: #4CAF50;
+            background-color: #bc973f;
             color: #fff;
             margin-right: 10px;
         }
 
         .register-btn {
-            background-color: #2196F3;
+            background-color: #bc973f;
             color: #fff;
         }
 
         .logout-btn {
             background-color: #FF5722;
-            color: #fff;
-        }
-
-        .view-profile-btn {
-            background-color: #FF9800;
             color: #fff;
         }
 
@@ -161,7 +156,7 @@
             <p align="center">To get access to the home page.</p>
             <p align="center">___________________________________</p>
             <p align="center">Check your card here :</p>
-            <p align="center"><a href="/live_check" class="view-profile-btn">Card Check</a></p>
+            <p align="center"><a href="/live_check" class="logout-btn">Card Check</a></p>
         </div>
         </main>
     {% endif %}
