--- a/web/templates/pushbutton.html
+++ b/web/templates/pushbutton.html
@@ -61,7 +61,7 @@
         .back-to-home {
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: #ec3a3a;
+            background-color: #FF5722;
             color: #fffbfb;
             text-decoration: none;
             border-radius: 5px;
